# KaleidoNet

./: .gitignore  LICENSE  README.md  REPORT.md  SPRO_CRITIQUE_KaleidoNet.md  _analyze_model.py  _debug_flops.py  _fix_annotations.py  _sanity_check.py  _sanity_check_v3.py  _smoke_train.py  analyze_v3f.py  compute_stats.py  pyproject.toml  run.py  run_ablations_2gpu.sh  run_all_baselines.sh
configs/: default.yaml
experiments/: analyze_multi_seed.py  instrumented_gradscale.py  multi_seed_run.py  run_convergence.py  run_server_phase2.sh
figures/: summary_table.txt
kaleidonet/: __init__.py  export.py  model.py  pruning.py
notebooks/: train_a100.ipynb  train_colab.ipynb
paper/: Makefile  main.tex  neurips_2026.sty  references.bib  stats_ablation.tex  stats_tables.tex
paper-sr/: README.md  SUBMISSION_NOTES.md  cover_letter.md  main.tex  references.bib  stats_ablation.tex
results/: dense_vit_cifar100.json  dense_vit_cifar10_seed1.json  dense_vit_stl10_seed2.json  dense_vit_tiny_imagenet_seed1.json  dense_vit_tiny_imagenet_seed2.json  dense_vit_tiny_imagenet_seed3.json  inference_benchmark.json  kaleidonet_cifar100.json  kaleidonet_stl10_seed1.json  kaleidonet_stl10_seed3.json  kaleidonet_tiny_imagenet_seed3.json  linear_schedule_cifar100_seed1.json  linear_schedule_cifar100_seed2.json  linear_schedule_cifar10_seed1.json  linear_schedule_cifar10_seed3.json  linear_schedule_stl10_seed2.json  linear_schedule_tiny_imagenet_seed1.json  linear_schedule_tiny_imagenet_seed3.json  magnitude_pruning_cifar100_seed2.json  magnitude_pruning_cifar10_seed2.json  (+30 more)
(+377 files in other folders)
